--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   path:
   flutter_riverpod:
   google_sign_in:
+  video_player:
+  video_compress: ^3.1.2
 
   font_awesome_flutter:
   flex_color_scheme:
