--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0-174.3.beta <4.0.0'
+  sdk: '>=3.2.5 <4.0.0'
 
 dependencies:
   flutter:
